  on clone()'ing and subtype()'ing.
- Fix to rfc1902.OctetString & Bits to base them on OctetString class to
  make the 'fixed length' property working.
- Fix to .clone() method of rfc1902.Bits class to make its signature
  matching the rest of classes. This may broke code which used to pass
  namedValue parameter positionally rather than binding it by name.

Revision 4.2.5
--------------

- License updated to vanilla BSD 2-Clause to ease package use
  (http://opensource.org/licenses/BSD-2-Clause).
- A dozen of lightweight Twisted-based example scripts replaced more
  complex example implementations used previously.
- SNMP Proxy example apps separated into a larger set of more specialized
  ones.
- Most of Command Generator examples re-pointed to a live SNMP Agent
  at demo.snmplabs.com to ease experimentation and adoption.
- Multithreaded oneliner CommandGenerator example added.
- Packet-level SNMP API (pysnmp.proto.api) getErrorIndex() method can now
  be instructed to ignore portentially malformed errorIndex SNMP packet
  value what sometimes happens with buggy SNMP implementations.
- Standard SNMP Apps and built-in proxy now ignores malformed errorIndex
  value.
- Built-in logging now includes timestamps.
- Multi-lingual capabilities of all CommandGenerator & NotificationOriginator
  apps re-worked and improved. For instance it is now it's possible to run
  getBulk() against a SNMPv1 Agent invoking built-in SNMP Proxy behind the
  scene.
- The $PYSNMP_MIB_DIR & $PYSNMP_MIB_DIRS & $PYSNMP_MIB_PKGS path separator
  made platform-specific.
- Change to rfc2576.v1tov2() logic: errorStatus = noSuchName is now 
  translated into rfc1905.noSuchObject exception value for *all* var-bindings
  at once. Although RFC2576 does not suggest error-status -> v2c exception
  translation, historically pysnmp used to perform it for a long time so we
  can't easily stop doing that.
- Exception re-raising improved at MibInstrumController.flipFlopFsm() and